[package]
name = "ecosystem"
version = "0.1.0"
authors = ["kailan yue <yuekailan@gmail.com>"]
edition = "2021"
description = ""
documentation = ""
keywords = ["", ""]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kailanyue/04-ecosystem"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.38", features = ["serde"] }
nanoid = "0.4.0"
opentelemetry = "0.23.0"
opentelemetry-otlp = { version = "0.16.0", features = ["tonic"] }
opentelemetry-semantic-conventions = "0.15.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
snafu = "0.8.2"
thiserror = "1.0.61"
toml = "0.8.13"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }


[dev-dependencies]
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
blake3 = "1.5.1"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
console-subscriber = "0.2.0"
dashmap = "5.5.3"
derive_builder = "0.20.0"
derive_more = "0.99.17"
futures = "0.3.30"
http = "1.1.0"
loom = "0.7.2"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7", features = [ "postgres", "runtime-tokio", "tls-rustls" ] }
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["codec"] }
url = "2.5.0"

[build]
rustflags = ["--cfg", "tokio_unstable"]
